[gd_scene load_steps=12 format=2]

[ext_resource path="res://enemy/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://enemy/lion/lion.tres" type="SpriteFrames" id=2]
[ext_resource path="res://enemy/lion/lion.gd" type="Script" id=3]
[ext_resource path="res://interface/gui_boss.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/sprites/Lion_Back_Attack_1.png" type="Texture" id=5]
[ext_resource path="res://enemy/sprites/Lion_Back_Attack_2.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 289.358

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 108.116

[sub_resource type="CircleShape2D" id=18]
radius = 44.0028

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[node name="Lion" type="KinematicBody2D"]
position = Vector2( 146, 124 )
collision_layer = 4
collision_mask = 10
script = ExtResource( 3 )

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="AnimatedSprite" parent="."]
position = Vector2( 14, 24 )
scale = Vector2( 2.5825, 1.7875 )
frames = SubResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
position = Vector2( 0, -12 )
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 2 )
animation = "idle"
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -13 )
shape = SubResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer_anim_hurt" type="Timer" parent="."]
wait_time = 0.25

[node name="Timer_anim_attack" type="Timer" parent="."]
wait_time = 0.5

[node name="TimerKnockback" type="Timer" parent="."]
wait_time = 0.75

[node name="CanvasLayer" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -12 )
rotation = 1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Claws" type="AnimatedSprite" parent="."]
modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
position = Vector2( -1, -188 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 20 )
playing = true
__meta__ = {
"_edit_group_": true
}

[connection signal="healthChanged" from="." to="." method="_on_Enemy_healthChanged"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_anim_hurt" to="." method="_on_Timer_animation_timeout"]
[connection signal="timeout" from="Timer_anim_hurt" to="." method="_on_Timer_anim_hurt_timeout"]
[connection signal="timeout" from="Timer_anim_attack" to="." method="_on_Timer_anim_attack_timeout"]
[connection signal="timeout" from="TimerKnockback" to="." method="_on_TimerKnockback_timeout"]
